--- a/web/static/css/_layout.scss
+++ b/web/static/css/_layout.scss
@@ -166,9 +166,6 @@ header {
     vertical-align: middle;
     margin-left: 20px;
     display: inline-block;
-    i {
-      line-height: 2;
-    }
   }
 }
 
